--- a/test_openai.ipynb
+++ b/test_openai.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject list at 0x10d08e2c0> JSON: {\n",
+       "<OpenAIObject list at 0x109433c20> JSON: {\n",
        "  \"object\": \"list\",\n",
        "  \"data\": [\n",
        "    {\n",
@@ -1305,7 +1305,7 @@
        "}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1381,91 +1381,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
        "### Instruction:\n",
-       "Perform a code review on the given HTML/CSS code file and identify issues related to readability, uniformity, understandability, correctness, performance, and security without updating the code itself.\n",
+       "Perform a code review on the provided HTML/CSS code file to improve the factors related to readability, uniformity, understandability, correctness, performance, and security. Provide feedback on each factor without updating the code itself.\n",
        "\n",
        "### Input:\n",
+       "HTML/CSS code file:\n",
+       "\n",
        "```html\n",
        "<!DOCTYPE html>\n",
        "<html>\n",
+       "\n",
        "<head>\n",
-       "  <title>My Website</title>\n",
-       "  <link href=\"styles.css\" rel=\"stylesheet\">\n",
+       "  <link rel=\"stylesheet\" type=\"text/css\" href=\"styles.css\">\n",
+       "  <script src=\"script.js\"></script>\n",
        "</head>\n",
+       "\n",
        "<body>\n",
-       "  <h1>My Website</h1>\n",
-       "  <div id=\"navbar\">\n",
-       "    <ul>\n",
-       "      <li><a href=\"#home\">Home</a></li>\n",
-       "      <li><a href=\"#about\">About</a></li>\n",
-       "      <li><a href=\"#services\">Services</a></li>\n",
-       "      <li><a href=\"#contact\">Contact</a></li>\n",
-       "    </ul>\n",
+       "  <h1 style=\"color: blue;\">Welcome to My Website</h1>\n",
+       "  \n",
+       "  <div class=\"content\">\n",
+       "    <p>Here is some text about my website.</p>\n",
        "  </div>\n",
-       "  <div id=\"home\">\n",
-       "    <h2>Welcome to My Website!</h2>\n",
-       "    <p>This is a sample website.</p>\n",
-       "  </div>\n",
-       "  <div id=\"about\">\n",
-       "    <h2>About</h2>\n",
-       "    <p>This website is about...</p>\n",
-       "  </div>\n",
-       "  <div id=\"services\">\n",
-       "    <h2>Our Services</h2>\n",
-       "    <p>We provide the following services:</p>\n",
-       "    <ul>\n",
-       "      <li>Web Design</li>\n",
-       "      <li>Graphic Design</li>\n",
-       "      <li>Content Writing</li>\n",
-       "    </ul>\n",
-       "  </div>\n",
-       "  <div id=\"contact\">\n",
-       "    <h2>Contact Us</h2>\n",
-       "    <form>\n",
-       "      <label for=\"name\">Name:</label>\n",
-       "      <input type=\"text\" id=\"name\" name=\"name\" required>\n",
-       "      <br>\n",
-       "      <label for=\"email\">Email:</label>\n",
-       "      <input type=\"email\" id=\"email\" name=\"email\" required>\n",
-       "      <br>\n",
-       "      <label for=\"message\">Message:</label>\n",
-       "      <textarea id=\"message\" name=\"message\" required></textarea>\n",
-       "      <br>\n",
-       "      <button type=\"submit\">Send</button>\n",
-       "    </form>\n",
-       "  </div>\n",
+       "  \n",
+       "  <ul>\n",
+       "    <li><a href=\"#\">Home</a></li>\n",
+       "    <li><a href=\"#\">About</a></li>\n",
+       "    <li><a href=\"#\">Services</a></li>\n",
+       "    <li><a href=\"#\">Contact</a></li>\n",
+       "  </ul>\n",
        "</body>\n",
+       "\n",
        "</html>\n",
        "```\n",
        "\n",
        "### Output:\n",
        "- Readability (Status: POOR)\n",
-       "  - The code lacks consistent indentation, making it harder to read and understand.\n",
-       "  - The code lacks comments to explain the purpose of different sections or elements.\n",
-       "\n",
+       "  - The code could benefit from proper indentation and consistent use of line breaks.\n",
+       "  - Inline CSS styling for the `<h1>` element reduces readability. It would be better to move the styling to a dedicated CSS file.\n",
+       "  \n",
        "- Uniformity (Status: POOR)\n",
-       "  - The use of inline styles in the HTML elements makes the code less uniform. It would be better to separate the CSS styles into a separate file.\n",
-       "  - The use of different naming conventions for id attributes, such as \"navbar\" and \"home\", makes the code less uniform. Using a consistent naming convention would improve readability.\n",
-       "\n",
+       "  - The HTML tags and attributes should be consistently lowercase or uppercase for better visual consistency.\n",
+       "  - The use of single quotes for HTML attributes (`<link rel='stylesheet'>`) should be consistent throughout the code.\n",
+       "  \n",
        "- Understandability (Status: GOOD)\n",
-       "  - The code is relatively easy to understand, as it follows a typical HTML structure and uses semantic elements.\n",
-       "\n",
+       "  - The code is fairly straightforward and easy to understand.\n",
+       "  \n",
        "- Correctness (Status: GOOD)\n",
-       "  - The code is correct in terms of syntax and valid HTML structure.\n",
-       "\n",
+       "  - The code does not contain any obvious errors or inconsistencies.\n",
+       "  \n",
        "- Performance (Status: GOOD)\n",
-       "  - No performance-related issues were found in the code.\n",
-       "\n",
+       "  - No performance-related issues were identified in the code.\n",
+       "  \n",
        "- Security (Status: GOOD)\n",
-       "  - No security-related issues were found in the code. However, it is always recommended to properly sanitize user inputs to prevent potential vulnerabilities.\n",
-       "\n",
-       "Overall, the code could benefit from improved readability and uniformity by applying consistent indentation, separating CSS styles into a separate file, and using a uniform naming convention for id attributes. Adding comments to explain the purpose of different sections would also improve understandability."
+       "  - No security-related issues were identified in the code."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1481,22 +1455,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'### Instruction:\\nPerform a code review on the given HTML/CSS code file and identify issues related to readability, uniformity, understandability, correctness, performance, and security without updating the code itself.\\n\\n### Input:\\n```html\\n<!DOCTYPE html>\\n<html>\\n<head>\\n  <title>My Website</title>\\n  <link href=\"styles.css\" rel=\"stylesheet\">\\n</head>\\n<body>\\n  <h1>My Website</h1>\\n  <div id=\"navbar\">\\n    <ul>\\n      <li><a href=\"#home\">Home</a></li>\\n      <li><a href=\"#about\">About</a></li>\\n      <li><a href=\"#services\">Services</a></li>\\n      <li><a href=\"#contact\">Contact</a></li>\\n    </ul>\\n  </div>\\n  <div id=\"home\">\\n    <h2>Welcome to My Website!</h2>\\n    <p>This is a sample website.</p>\\n  </div>\\n  <div id=\"about\">\\n    <h2>About</h2>\\n    <p>This website is about...</p>\\n  </div>\\n  <div id=\"services\">\\n    <h2>Our Services</h2>\\n    <p>We provide the following services:</p>\\n    <ul>\\n      <li>Web Design</li>\\n      <li>Graphic Design</li>\\n      <li>Content Writing</li>\\n    </ul>\\n  </div>\\n  <div id=\"contact\">\\n    <h2>Contact Us</h2>\\n    <form>\\n      <label for=\"name\">Name:</label>\\n      <input type=\"text\" id=\"name\" name=\"name\" required>\\n      <br>\\n      <label for=\"email\">Email:</label>\\n      <input type=\"email\" id=\"email\" name=\"email\" required>\\n      <br>\\n      <label for=\"message\">Message:</label>\\n      <textarea id=\"message\" name=\"message\" required></textarea>\\n      <br>\\n      <button type=\"submit\">Send</button>\\n    </form>\\n  </div>\\n</body>\\n</html>\\n```\\n\\n### Output:\\n- Readability (Status: POOR)\\n  - The code lacks consistent indentation, making it harder to read and understand.\\n  - The code lacks comments to explain the purpose of different sections or elements.\\n\\n- Uniformity (Status: POOR)\\n  - The use of inline styles in the HTML elements makes the code less uniform. It would be better to separate the CSS styles into a separate file.\\n  - The use of different naming conventions for id attributes, such as \"navbar\" and \"home\", makes the code less uniform. Using a consistent naming convention would improve readability.\\n\\n- Understandability (Status: GOOD)\\n  - The code is relatively easy to understand, as it follows a typical HTML structure and uses semantic elements.\\n\\n- Correctness (Status: GOOD)\\n  - The code is correct in terms of syntax and valid HTML structure.\\n\\n- Performance (Status: GOOD)\\n  - No performance-related issues were found in the code.\\n\\n- Security (Status: GOOD)\\n  - No security-related issues were found in the code. However, it is always recommended to properly sanitize user inputs to prevent potential vulnerabilities.\\n\\nOverall, the code could benefit from improved readability and uniformity by applying consistent indentation, separating CSS styles into a separate file, and using a uniform naming convention for id attributes. Adding comments to explain the purpose of different sections would also improve understandability.'"
+       "<OpenAIObject chat.completion id=chatcmpl-7cV08fNG8SsKOw3L5iq8CqwOTS1L8 at 0x109c8b180> JSON: {\n",
+       "  \"id\": \"chatcmpl-7cV08fNG8SsKOw3L5iq8CqwOTS1L8\",\n",
+       "  \"object\": \"chat.completion\",\n",
+       "  \"created\": 1689409988,\n",
+       "  \"model\": \"gpt-3.5-turbo-0613\",\n",
+       "  \"choices\": [\n",
+       "    {\n",
+       "      \"index\": 0,\n",
+       "      \"message\": {\n",
+       "        \"role\": \"assistant\",\n",
+       "        \"content\": \"### Instruction:\\nPerform a code review on the provided HTML/CSS code file to improve the factors related to readability, uniformity, understandability, correctness, performance, and security. Provide feedback on each factor without updating the code itself.\\n\\n### Input:\\nHTML/CSS code file:\\n\\n```html\\n<!DOCTYPE html>\\n<html>\\n\\n<head>\\n  <link rel=\\\"stylesheet\\\" type=\\\"text/css\\\" href=\\\"styles.css\\\">\\n  <script src=\\\"script.js\\\"></script>\\n</head>\\n\\n<body>\\n  <h1 style=\\\"color: blue;\\\">Welcome to My Website</h1>\\n  \\n  <div class=\\\"content\\\">\\n    <p>Here is some text about my website.</p>\\n  </div>\\n  \\n  <ul>\\n    <li><a href=\\\"#\\\">Home</a></li>\\n    <li><a href=\\\"#\\\">About</a></li>\\n    <li><a href=\\\"#\\\">Services</a></li>\\n    <li><a href=\\\"#\\\">Contact</a></li>\\n  </ul>\\n</body>\\n\\n</html>\\n```\\n\\n### Output:\\n- Readability (Status: POOR)\\n  - The code could benefit from proper indentation and consistent use of line breaks.\\n  - Inline CSS styling for the `<h1>` element reduces readability. It would be better to move the styling to a dedicated CSS file.\\n  \\n- Uniformity (Status: POOR)\\n  - The HTML tags and attributes should be consistently lowercase or uppercase for better visual consistency.\\n  - The use of single quotes for HTML attributes (`<link rel='stylesheet'>`) should be consistent throughout the code.\\n  \\n- Understandability (Status: GOOD)\\n  - The code is fairly straightforward and easy to understand.\\n  \\n- Correctness (Status: GOOD)\\n  - The code does not contain any obvious errors or inconsistencies.\\n  \\n- Performance (Status: GOOD)\\n  - No performance-related issues were identified in the code.\\n  \\n- Security (Status: GOOD)\\n  - No security-related issues were identified in the code.\"\n",
+       "      },\n",
+       "      \"finish_reason\": \"stop\"\n",
+       "    }\n",
+       "  ],\n",
+       "  \"usage\": {\n",
+       "    \"prompt_tokens\": 212,\n",
+       "    \"completion_tokens\": 405,\n",
+       "    \"total_tokens\": 617\n",
+       "  }\n",
+       "}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "completion.choices[0].message.content"
+    "completion"
    ]
   }
  ],
