Update files structure

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,7 @@
     "    else:\n",
     "      (instruction, input, output) = task_dict[\"instruction\"], task_dict[\"input\"], task_dict[\"output\"]\n",
     "    instruction = re.sub(r\"\\s+\", \" \", instruction).strip().rstrip(\":\")\n",
+    "    \n",
     "    input = \"<noinput>\" if input.lower() == \"\" else input\n",
     "    prompt += f\"###\\n\"\n",
     "    prompt += f\"{idx + 1}. Instruction: {instruction}\\n\"\n",
@@ -227,14 +228,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated Tasks Length: 52\n"
+      "Generated Tasks Length: 100\n"
      ]
     }
    ],
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -466,6 +467,198 @@
       "\n",
       "Output #52\n",
       "avg_similarity_score\t>>  0.7343935985665769\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #53\n",
+      "avg_similarity_score\t>>  0.7034585779938831\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #54\n",
+      "avg_similarity_score\t>>  0.7025367211113411\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #55\n",
+      "avg_similarity_score\t>>  0.5879912147264212\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #56\n",
+      "avg_similarity_score\t>>  0.706010375899304\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #57\n",
+      "avg_similarity_score\t>>  0.708442366251291\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #58\n",
+      "avg_similarity_score\t>>  0.7215119506493574\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #59\n",
+      "avg_similarity_score\t>>  0.6778677877906033\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #60\n",
+      "avg_similarity_score\t>>  0.6899877267331397\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #61\n",
+      "avg_similarity_score\t>>  0.6364796434310491\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #62\n",
+      "avg_similarity_score\t>>  0.6940483474848319\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #63\n",
+      "avg_similarity_score\t>>  0.6409657758627496\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #64\n",
+      "avg_similarity_score\t>>  0.7011756206749167\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #65\n",
+      "avg_similarity_score\t>>  0.6458311115450964\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #66\n",
+      "avg_similarity_score\t>>  0.7011775376999821\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #67\n",
+      "avg_similarity_score\t>>  0.7035718417550477\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #68\n",
+      "avg_similarity_score\t>>  0.698659238562005\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #69\n",
+      "avg_similarity_score\t>>  0.7025659571375856\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #70\n",
+      "avg_similarity_score\t>>  0.7035182238515789\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #71\n",
+      "avg_similarity_score\t>>  0.7059884553184922\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #72\n",
+      "avg_similarity_score\t>>  0.709618227475054\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #73\n",
+      "avg_similarity_score\t>>  0.7073639902797187\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #74\n",
+      "avg_similarity_score\t>>  0.7219641524085518\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #75\n",
+      "avg_similarity_score\t>>  0.7088251371894009\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #76\n",
+      "avg_similarity_score\t>>  0.729967996479103\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #77\n",
+      "avg_similarity_score\t>>  0.7133608915369481\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #78\n",
+      "avg_similarity_score\t>>  0.7179987155099083\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #79\n",
+      "avg_similarity_score\t>>  0.7217507977092273\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #80\n",
+      "avg_similarity_score\t>>  0.7225702963757784\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #81\n",
+      "avg_similarity_score\t>>  0.7270187500688993\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #82\n",
+      "avg_similarity_score\t>>  0.7267685495312712\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #83\n",
+      "avg_similarity_score\t>>  0.7301915369876952\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #84\n",
+      "avg_similarity_score\t>>  0.6989994015553654\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #85\n",
+      "avg_similarity_score\t>>  0.5994075560889268\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #86\n",
+      "avg_similarity_score\t>>  0.6397955307060671\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #87\n",
+      "avg_similarity_score\t>>  0.5885798343764292\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #88\n",
+      "avg_similarity_score\t>>  0.5961725594808689\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #89\n",
+      "avg_similarity_score\t>>  0.5935011410759772\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #90\n",
+      "avg_similarity_score\t>>  0.6801855085227437\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #91\n",
+      "avg_similarity_score\t>>  0.6868256456926908\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #92\n",
+      "avg_similarity_score\t>>  0.7238847645790969\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #93\n",
+      "avg_similarity_score\t>>  0.6705827613564078\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #94\n",
+      "avg_similarity_score\t>>  0.7252257333370021\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #95\n",
+      "avg_similarity_score\t>>  0.6724266774209726\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #96\n",
+      "avg_similarity_score\t>>  0.7241593176948016\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #97\n",
+      "avg_similarity_score\t>>  0.6719416287800828\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #98\n",
+      "avg_similarity_score\t>>  0.6133251691918057\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #99\n",
+      "avg_similarity_score\t>>  0.7422057513107131\n",
+      "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
+      "\n",
+      "Output #100\n",
+      "avg_similarity_score\t>>  0.7305214950603196\n",
       "factors\t\t\t>>  ['Readability', 'Uniformity', 'Understandability', 'Correctness', 'Performance', 'Security']\n",
       "\n"
      ]
