--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "import re\n",
     "import utils\n",
+    "import json\n",
+    "\n",
     "\n",
     "def check_tasks(tasks):\n",
     "  prompt = ''\n",
@@ -25,6 +27,7 @@
     "    prompt += f\"{idx + 1}. Input:\\n{input}\\n\"\n",
     "    prompt += f\"{idx + 1}. Output:\\n{output}\\n\"\n",
     "  print(prompt)\n",
+    "\n",
     "\n",
     "def get_tasks_outputs(tasks):\n",
     "  return [\n",
@@ -228,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -698,6 +701,58 @@
     "    factors = [s.split('(')[0].strip('- ') for s in factors]\n",
     "    print('factors\\t\\t\\t>> ', factors)\n",
     "    print()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocess Tasks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "  {\n",
+      "    \"instruction\": \"Perform a code review on the provided Python script and provide feedback on the readability, uniformity, understandability, correctness, performance, and security aspects of the code.\",\n",
+      "    \"input\": \"```\\n# Python script to check if a number is prime or not\\n\\ndef is_prime(number):\\n    if number < 2:\\n        return False\\n    for i in range(2, number):\\n        if number % i == 0:\\n            return False\\n    return True\\n\\nnum = 17\\n\\nif is_prime(num):\\n    print(f\\\"{num} is a prime number.\\\")\\nelse:\\n    print(f\\\"{num} is not a prime number.\\\")\\n```\",\n",
+      "    \"output\": \"- Readability (Status: POSITIVE)\\n  - The code is well-structured and easy to read.\\n  - The use of comments helps in understanding the purpose of the different sections of code.\\n- Uniformity (Status: POSITIVE)\\n  - The code follows consistent indentation and spacing conventions, improving uniformity.\\n- Understandability (Status: POSITIVE)\\n  - The code is simple and straightforward to understand.\\n  - The function name \\\"is_prime\\\" clearly indicates its purpose.\\n- Correctness (Status: POSITIVE)\\n  - The code correctly identifies prime numbers.\\n- Performance (Status: NEGATIVE)\\n  - The code can be optimized by checking for divisibility only up to the square root of the number.\\n- Security (Status: POSITIVE)\\n  - No security issues identified.\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"instruction\": \"Conduct a code review on the provided JavaScript function to improve its readability, uniformity, understandability, correctness, performance, and security.\",\n",
+      "    \"input\": \"```javascript\\n// JavaScript function to calculate the factorial of a number\\n\\nfunction factorial(n) {\\n    if (n < 0) {\\n        return \\\"Factorial is not defined for negative numbers.\\\";\\n    }\\n    if (n === 0) {\\n        return 1;\\n    }\\n    let result = 1;\\n    for (let i = 1; i <= n; i++) {\\n        result *= i;\\n    }\\n    return result;\\n}\\n\\nlet number = 5;\\nlet factorialResult = factorial(number);\\nconsole.log(\\\"Factorial of \\\" + number + \\\" is: \\\" + factorialResult);\\n```\",\n",
+      "    \"output\": \"- Readability (Status: POSITIVE)\\n  - The code is well-structured and easy to read.\\n  - The use of comments helps in understanding the purpose of the code.\\n- Uniformity (Status: POSITIVE)\\n  - The code follows consistent indentation and spacing conventions, promoting uniformity.\\n- Understandability (Status: POSITIVE)\\n  - The code is simple and straightforward to understand.\\n  - The function name \\\"factorial\\\" clearly indicates its purpose.\\n- Correctness (Status: POSITIVE)\\n  - The code correctly calculates the factorial of a number.\\n- Performance (Status: POSITIVE)\\n  - The code doesn't have any noticeable performance issues.\\n- Security (Status: POSITIVE)\\n  - No security issues identified.\"\n",
+      "  },\n",
+      "  {\n",
+      "    \"instruction\": \"Review the given C++ code and provide feedback on its readability, uniformity, understandability, correctness, performance, and security factors.\",\n",
+      "    \"input\": \"```cpp\\n// C++ program to reverse an array\\n#include <iostream>\\nusing namespace std;\\n\\nvoid reverseArray(int arr[], int n)\\n{\\n    for (int i = 0; i < n / 2; i++) {\\n        int temp = arr[i];\\n        arr[i] = arr[n - i - 1];\\n        arr[n - i - 1] = temp;\\n    }\\n}\\n\\nint main()\\n{\\n    int arr[] = {1, 2, 3, 4, 5};\\n    int n = sizeof(arr) / sizeof(arr[0]);\\n\\n    reverseArray(arr, n);\\n\\n    cout << \\\"Reversed Array: \\\";\\n    for (int i = 0; i < n; i++) {\\n        cout << arr[i] << \\\" \\\";\\n    }\\n\\n    return 0;\\n}\\n```\",\n",
+      "    \"output\": \"- Readability (Status: POSITIVE)\\n  - The code is written in a readable manner with appropriate indentations and line breaks.\\n  - The use of comments helps in understanding the purpose of the different sections of code.\\n- Uniformity (Status: POSITIVE)\\n  - The code follows consistent spacing and naming conventions.\\n- Understandability (Status: POSITIVE)\\n  - The purpose of the code is clear and easy to understand.\\n- Correctness (Status: POSITIVE)\\n  - The code correctly reverses the elements of the array.\\n- Performance (Status: POSITIVE)\\n  - No performance issues identified.\\n- Security (Status: POSITIVE)\\n  - No security issues identified.\"\n",
+      "  }\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "regen_tasks_ = [{k: v for k, v in d.items() if k not in {'most_similar_instructions', 'avg_similarity_score'}} for d in regen_tasks]\n",
+    "print(json.dumps(regen_tasks_[:3], indent=2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('coderev_data.json', 'w') as f:\n",
+    "    json.dump(regen_tasks_, f)"
    ]
   }
  ],
