Generate 400 additional data

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -54,8 +54,90 @@
      "output_type": "stream",
      "text": [
       "###\n",
-      "1. Instruction: Perform a code review on the provided HTML/CSS code file. Evaluate the code based on the following factors: readability, uniformity, understandability, correctness, performance, and security.\n",
+      "1. Instruction: Perform a code review on the given HTML/CSS code file and provide feedback on the following factors: readability, uniformity, understandability, correctness, performance, and security.\n",
       "1. Input:\n",
+      "```\n",
+      "<!DOCTYPE html>\n",
+      "<html>\n",
+      "<head>\n",
+      "    <title>Sample Page</title>\n",
+      "    <style>\n",
+      "        body {\n",
+      "            font-family: Arial, sans-serif;\n",
+      "            font-size: 14px;\n",
+      "            color: #333;\n",
+      "        }\n",
+      "        \n",
+      "        #header {\n",
+      "            background-color: #ccc;\n",
+      "            padding: 20px;\n",
+      "        }\n",
+      "        \n",
+      "        #content {\n",
+      "            margin-top: 50px;\n",
+      "            padding: 20px;\n",
+      "        }\n",
+      "        \n",
+      "        .box {\n",
+      "            background-color: #f0f0f0;\n",
+      "            border: 1px solid #ccc;\n",
+      "            padding: 10px;\n",
+      "            margin-bottom: 20px;\n",
+      "        }\n",
+      "        \n",
+      "        .box h2 {\n",
+      "            font-size: 18px;\n",
+      "            margin-bottom: 10px;\n",
+      "        }\n",
+      "        \n",
+      "        .box p {\n",
+      "            line-height: 1.5;\n",
+      "        }\n",
+      "        \n",
+      "        .box .button {\n",
+      "            background-color: #333;\n",
+      "            color: #fff;\n",
+      "            padding: 5px 10px;\n",
+      "            border-radius: 3px;\n",
+      "            text-decoration: none;\n",
+      "        }\n",
+      "    </style>\n",
+      "</head>\n",
+      "<body>\n",
+      "    <div id=\"header\">\n",
+      "        <h1>Sample Page</h1>\n",
+      "    </div>\n",
+      "    <div id=\"content\">\n",
+      "        <div class=\"box\">\n",
+      "            <h2>Introduction</h2>\n",
+      "            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec fringilla placerat pharetra.</p>\n",
+      "        </div>\n",
+      "        <div class=\"box\">\n",
+      "            <h2>About</h2>\n",
+      "            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed iaculis mollis lorem, in congue orci convallis nec.</p>\n",
+      "            <a href=\"#\" class=\"button\">Learn More</a>\n",
+      "        </div>\n",
+      "    </div>\n",
+      "</body>\n",
+      "</html>\n",
+      "```\n",
+      "1. Output:\n",
+      "- Readability (Status: NEGATIVE)\n",
+      "  - Consider using proper line breaks and spacing between elements for better readability.\n",
+      "  - Avoid inline styling and use CSS classes instead for better separation of concerns.\n",
+      "- Uniformity (Status: POSITIVE)\n",
+      "  - The code demonstrates uniformity in terms of naming conventions and coding style.\n",
+      "- Understandability (Status: POSITIVE)\n",
+      "  - The code is relatively easy to understand and follow.\n",
+      "- Correctness (Status: POSITIVE)\n",
+      "  - The code appears to be correct syntactically.\n",
+      "- Performance (Status: POSITIVE)\n",
+      "  - No performance issues found in the given code.\n",
+      "- Security (Status: POSITIVE)\n",
+      "  - No security issues found in the given code.\n",
+      "###\n",
+      "2. Instruction: Perform a code review on the provided HTML/CSS code file. Evaluate the code based on the following factors: readability, uniformity, understandability, correctness, performance, and security.\n",
+      "2. Input:\n",
       "```\n",
       "<!DOCTYPE html>\n",
       "<html>\n",
@@ -101,7 +183,7 @@
       "</body>\n",
       "</html>\n",
       "```\n",
-      "1. Output:\n",
+      "2. Output:\n",
       "- Readability (Status: POSITIVE)\n",
       "  - The code is well-indented and uses proper spacing and line breaks, making it easy to read and understand.\n",
       "- Uniformity (Status: POSITIVE)\n",
@@ -114,54 +196,6 @@
       "  - The code doesn't contain any noticeable performance issues. However, without further information about the specific performance requirements or potential bottlenecks, it is challenging to make significant performance-related suggestions.\n",
       "- Security (Status: POSITIVE)\n",
       "  - No security issues are apparent in the provided code. However, without additional context about the application's specific security requirements, it's challenging to provide extensive security-related suggestions.\n",
-      "###\n",
-      "2. Instruction: Perform a code review on the provided JavaScript code file. Evaluate the code based on the factors of readability, uniformity, understandability, correctness, performance, and security.\n",
-      "2. Input:\n",
-      "```\n",
-      "function  calculateSum() {\n",
-      "let a = 5; let b = 10; let c = 15;\n",
-      "var sum  =  a + b + c;\n",
-      "console.log(\"The sum is: \" + sum);\n",
-      "}\n",
-      "function calculateProduct() {\n",
-      "  var a = 5;\n",
-      "  var b = 10;\n",
-      "  var c = 15;\n",
-      "  \n",
-      "  var product = a * b * c;\n",
-      "  \n",
-      "  console.log(\"The product is: \" + product);\n",
-      "}\n",
-      "function calculateAverage() {\n",
-      "  let a = 5;\n",
-      "  let b = 10;\n",
-      "  let c = 15;\n",
-      "  \n",
-      "  let average = (a + b + c) / 3;\n",
-      "  \n",
-      "  console.log(\"The average is: \" + average);\n",
-      "}\n",
-      "calculateSum();\n",
-      "calculateProduct();\n",
-      "calculateAverage();\n",
-      "```\n",
-      "2. Output:\n",
-      "- Readability (Status: NEGATIVE)\n",
-      "  - Inconsistent use of variable declaration keywords (`let` and `var`).\n",
-      "  - Inconsistent placement of semicolons at the end of lines.\n",
-      "  - Lack of proper spacing between operators and operands reduces readability.\n",
-      "- Uniformity (Status: NEGATIVE)\n",
-      "  - The code lacks a consistent coding style throughout, resulting in varying indentation, spacing, and naming conventions.\n",
-      "  - Inconsistent use of single and double quotes for string literals.\n",
-      "  - Inconsistent use of `let` and `var` for variable declaration.\n",
-      "- Understandability (Status: POSITIVE)\n",
-      "  - The code is relatively straightforward and easy to understand.\n",
-      "- Correctness (Status: POSITIVE)\n",
-      "  - The code appears to be correct in terms of syntax and logic.\n",
-      "- Performance (Status: POSITIVE)\n",
-      "  - No performance-related issues were found in the code.\n",
-      "- Security (Status: POSITIVE)\n",
-      "  - No security vulnerabilities were found in the code.\n",
       "###\n",
       "3. Instruction: Perform a code review on the provided HTML/CSS code file to improve the following factors: Readability, Uniformity, Understandability, Correctness, Performance, and Security.\n",
       "3. Input:\n",
@@ -231,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -747,12 +781,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>instruction</th>\n",
+       "      <th>input</th>\n",
+       "      <th>output</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Perform a code review on the provided Python s...</td>\n",
+       "      <td>```\\n# Python script to check if a number is p...</td>\n",
+       "      <td>- Readability (Status: POSITIVE)\\n  - The code...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Conduct a code review on the provided JavaScri...</td>\n",
+       "      <td>```javascript\\n// JavaScript function to calcu...</td>\n",
+       "      <td>- Readability (Status: POSITIVE)\\n  - The code...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Review the given C++ code and provide feedback...</td>\n",
+       "      <td>```cpp\\n// C++ program to reverse an array\\n#i...</td>\n",
+       "      <td>- Readability (Status: POSITIVE)\\n  - The code...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         instruction  \\\n",
+       "0  Perform a code review on the provided Python s...   \n",
+       "1  Conduct a code review on the provided JavaScri...   \n",
+       "2  Review the given C++ code and provide feedback...   \n",
+       "\n",
+       "                                               input  \\\n",
+       "0  ```\\n# Python script to check if a number is p...   \n",
+       "1  ```javascript\\n// JavaScript function to calcu...   \n",
+       "2  ```cpp\\n// C++ program to reverse an array\\n#i...   \n",
+       "\n",
+       "                                              output  \n",
+       "0  - Readability (Status: POSITIVE)\\n  - The code...  \n",
+       "1  - Readability (Status: POSITIVE)\\n  - The code...  \n",
+       "2  - Readability (Status: POSITIVE)\\n  - The code...  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "task_df = pd.DataFrame(regen_tasks_)\n",
+    "task_df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total words: 21128\n",
+      "Ideal total words: 100000\n",
+      "How many dataset we need? 5 * current dataset = 500 data\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "word_count_df = task_df.applymap(lambda x: len(str(x).split()))\n",
+    "total_words = word_count_df.sum().sum()\n",
+    "ideal_total_words = 100_000\n",
+    "print('Total words:', total_words)\n",
+    "print('Ideal total words:', ideal_total_words)\n",
+    "\n",
+    "n = math.ceil(ideal_total_words/total_words)\n",
+    "print(f'How many dataset we need? {n} * current dataset = {n*len(task_df)} data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('coderev_data.json', 'w') as f:\n",
-    "    json.dump(regen_tasks_, f)"
+    "# with open('coderev_data.json', 'w') as f:\n",
+    "#     json.dump(regen_tasks_, f)"
    ]
   }
  ],
